ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache
  namespace: demo
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - apache.tjth.co
    secretName: apache-tjth-co
  rules:
  - host: apache.tjth.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache
            port:
              number: 80
